Adicionando testes para a classe ProgramarViagens